--- a/yeogiseo/app/src/main/AndroidManifest.xml
+++ b/yeogiseo/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA1KLF_69_u31tn-jS55jEreYnCWn2EGe0" />
+
         <activity
             android:name=".HallActivity"
             android:label="@string/title_activity_hall"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login">
+            android:label="여기서!">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +30,13 @@
         <activity
             android:name=".roomActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".mapFragment">
+
+        </activity>
+
+
     </application>
 
 </manifest>
